syntax = "proto3";

package config.v1;

import "config/v1/message.proto";
import "config/v1/task.proto";
import "config/v1/tlsconfig.proto";
import "config/v1/websocket.proto";
import "middleware/v1/middleware.proto";
import "validate/validate.proto";

option cc_enable_arenas = true;
option go_package = "github.com/origadmin/runtime/api/gen/go/config/v1;configv1";
option java_multiple_files = true;
option java_outer_classname = "ServiceProto";
option java_package = "com.github.origadmin.api.runtime.config.v1";
option objc_class_prefix = "ORC";

message Service {
  // HTTP
  message HTTP {
    string network = 1;
    string addr = 2;
    bool use_tls = 3 [json_name = "use_tls"];
    TLSConfig tls_config = 4 [json_name = "tls_config"];
    int64 timeout = 6 [json_name = "timeout"];
    int64 shutdown_timeout = 7 [json_name = "shutdown_timeout"];
    int64 read_timeout = 8 [json_name = "read_timeout"];
    int64 write_timeout = 9 [json_name = "write_timeout"];
    int64 idle_timeout = 10 [json_name = "idle_timeout"];
    string endpoint = 11 [json_name = "endpoint"];
  }

  // GRPC
  message GRPC {
    string network = 1;
    string addr = 2;
    bool use_tls = 3 [json_name = "use_tls"];
    TLSConfig tls_config = 4 [json_name = "tls_config"];
    int64 timeout = 6 [json_name = "timeout"];
    int64 shutdown_timeout = 7 [json_name = "shutdown_timeout"];
    int64 read_timeout = 8 [json_name = "read_timeout"];
    int64 write_timeout = 9 [json_name = "write_timeout"];
    int64 idle_timeout = 10 [json_name = "idle_timeout"];
    string endpoint = 11 [json_name = "endpoint"];
  }

  // Selector
  message Selector {
    string version = 1;
    string builder = 2;
  }
  // Service name for service discovery
  string name = 1 [json_name = "name"];
  string type = 2 [
    json_name = "type",
    (validate.rules).string = {
      in: [
        "http",
        "grpc",
        "websocket",
        "message",
        "task"
      ]
    }
  ];
  bool dynamic_endpoint = 3 [json_name = "dynamic_endpoint"];

  GRPC grpc = 10 [json_name = "grpc"];
  HTTP http = 20 [json_name = "http"];

  config.v1.WebSocket websocket = 100 [json_name = "websocket"];
  config.v1.Message message = 200 [json_name = "message"];
  config.v1.Task task = 300 [json_name = "task"];

  Selector selector = 500 [json_name = "selector"];
}
